--- a/vignettes/ProFound-Complex-Fit.Rmd
+++ b/vignettes/ProFound-Complex-Fit.Rmd
@@ -9,40 +9,49 @@ vignette: >
   %\VignetteEncoding{UTF-8}
 ---
 
-Load some libraries:
+Get the latest version of **ProFound** and **ProFit**:
 
-```{r}
+```{r, eval=FALSE}
+library(devtools)
+install_github('asgr/ProFound')
+install_github('ICRAR/ProFit')
+```
+
+
+First load the libraries we need:
+
+```{r, eval=FALSE}
 library(ProFound)
 library(ProFit)
 ```
 
-```{r, fig.width=5, fig.height=5, dpi=40}
+```{r, eval=FALSE, fig.width=5, fig.height=5, dpi=40}
 image=readFITS(system.file("extdata", 'VIKING/mystery_VIKING_Z.fits', package="ProFound"))
 profound=profoundProFound(image, magzero=30, verbose=TRUE, plot=TRUE, boundstats=TRUE, rotstats=TRUE)
 ```
 
 We can identify the large group of central potentially confused sources from the group output from **ProFound**:
 
-```{r}
+```{r, eval=FALSE}
 profound$group$groupsegID[1,]
 ```
 
 The main group has 8 segments, which we can view easily:
 
-```{r, fig.width=5, fig.height=5, dpi=40}
+```{r, eval=FALSE, fig.width=5, fig.height=5, dpi=40}
 magimage(profound$group$groupim==1)
 ```
 
 We can check the properties of the group 1 segments too:
 
-```{r}
+```{r, eval=FALSE}
 group1segstats=profound$segstats[profound$segstats$segID %in% unlist(profound$group$groupsegID[1,"segID"]),]
 group1segstats
 ```
 
 In our Full Monty vignette example we detail how to extract a reasonable PSF. We use the solution here.
 
-```{r}
+```{r, eval=FALSE}
 psf_modellist=list(
   moffat=list(
     xcen=75/2,
@@ -60,20 +69,20 @@ psf_model=profitMakeModel(modellist=psf_modellist, dim=c(75,75))$z
 
 We can see where this FWHM lies in comparison to the values estimated from **ProFound**.
 
-```{r, fig.width=5, fig.height=5, dpi=40}
+```{r, eval=FALSE, fig.width=5, fig.height=5, dpi=40}
 maghist(profound$segstats$R50*2/0.339,breaks=20)
 abline(v=4.47, lty=2)
 ```
 
 Have a quick check:
 
-```{r, fig.width=5, fig.height=5, dpi=40}
+```{r, eval=FALSE, fig.width=5, fig.height=5, dpi=40}
 magimage(psf_model)
 ```
 
 Let's try fitting all the sources as Sersic profiles!
 
-```{r}
+```{r, eval=FALSE}
 group1_modellist=list(
   pointsource=list(
     xcen= group1segstats$xmax[1:3],
@@ -159,15 +168,15 @@ group1_tolog=list(
 ```
 
 
-```{r, fig.width=5, fig.height=5, dpi=40}
+```{r, eval=FALSE, fig.width=5, fig.height=5, dpi=40}
 sigma=profoundMakeSigma(image$imDat, objects=profound$objects, gain=0.5, sky=profound$sky, skyRMS =profound$skyRMS, plot=TRUE)
 ```
 
-```{r}
+```{r, eval=FALSE}
 group1_Data=profitSetupData(image$imDat-profound$sky, sigma=sigma, modellist=group1_modellist, tofit=group1_tofit, tolog=group1_tolog, intervals=group1_interval, magzero=30, algo.func='optim', psf=psf_model, region=matrix(profound$segim %in% unlist(profound$group$groupsegID[1,'segID'])[1:5], 356), verbose=FALSE)
 ```
 
-```{r, fig.width=8, fig.height=5, dpi=40}
+```{r, eval=FALSE, fig.width=8, fig.height=5, dpi=40}
 profitLikeModel(parm=group1_Data$init, Data=group1_Data, makeplots=TRUE, plotchisq=TRUE)
 ```
 
